--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,8 @@
     <color name="non_lucky">#ff2e12</color>
     <color name="black_theme">#000000</color>
     <color name="white_theme">#E5E5E5</color>
+    <color name="cpb_red">#ff2e12</color>
+    <color name="cpb_grey">#E5E5E5</color>
+    <color name="cpb_red_dark">#C71800</color>
 
 </resources>
