--- a/app/src/main/res/layout-port/activity_main.xml
+++ b/app/src/main/res/layout-port/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.get.lucky.lt.MainActivity"
+    tools:context="com.get.lucky.lt.views.main.MainActivity"
     android:orientation="vertical"
     tools:ignore="MissingDefaultResource">
     <FrameLayout
